--- a/web/package.json
+++ b/web/package.json
@@ -78,6 +78,7 @@
     "msw": "^2.6.8",
     "nock": "^14.0.0",
     "prettier": "^3.5.2",
+    "sharp": "^0.34.5",
     "supertest": "^7.0.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.2.5",
