--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,11 @@
     "test": "jest && npm run test:e2e",
     "test:unit": "jest --testPathPattern=__tests__/unit",
     "test:integration": "jest --testPathPattern=__tests__/integration --no-coverage",
-    "test:e2e": "playwright test",
+    "test:e2e": "playwright test --config=e2e/playwright.config.ts",
+    "test:e2e:ui": "playwright test --config=e2e/playwright.config.ts --ui",
+    "test:e2e:headed": "playwright test --config=e2e/playwright.config.ts --headed",
+    "test:e2e:debug": "playwright test --config=e2e/playwright.config.ts --debug",
+    "test:e2e:report": "playwright show-report e2e/playwright-report",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --coverage --ci --watchAll=false && playwright test --reporter=line",
@@ -69,6 +73,7 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "canvas": "^2.11.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "eslint-plugin-security": "^3.0.1",
